--- a/html/Buchung/Modal.html
+++ b/html/Buchung/Modal.html
@@ -31,7 +31,7 @@
             </div>
 
             <div class="modal-footer">
-                <button type="button" id="btn_modal_buchen" class="btn btn-danger" onclick="buchen();">Buchen</button>
+                <button type="button" id="btn_modal_buchen" class="btn btn-danger" onclick="buchenNEU();">Buchen</button>
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Abbrechen</button>
             </div>
         </div>
