--- a/html/Buchung/Neu.html
+++ b/html/Buchung/Neu.html
@@ -79,7 +79,7 @@
             </div>
 
             <div class="modal-footer">
-                <button type="button" id="btn_modal_buchen" class="btn btn-danger" onclick="buchenNEU();">Buchen</button>
+                <button type="button" id="btn_modal_buchen" class="btn btn-danger"  onclick="buchenNEU();" data-dismiss="modal">Buchen</button>
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Abbrechen</button>
             </div>
         </div>
