--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <div class="nav flex-column nav-pills" role="tablist" onclick="toggleSidebar()" aria-orientation="vertical">
                     <a class="nav-link" onclick="$('#DIV_Buchung_NEU').load('/html/Buchung/Neu.html');" data-toggle="pill" href="#id_DIV_Buchung_NEU">Neu</a>
                     <a class="nav-link" onclick="$('#DIV_Buchung_PLANEN').load('/html/Buchung/Planen.html');" data-toggle="pill" href="#id_DIV_Buchung_PLANEN">Planen</a>
-                    <a class="nav-link" onclick="$('#DIV_Buchung_VERLAUF').load('/html/Buchung/VERLAUF.html');" data-toggle="pill" href="#id_DIV_Buchung_VERLAUF">Verlauf</a>
+                    <a class="nav-link" onclick="$('#DIV_Buchung_VERLAUF').load('/html/Buchung/Verlauf.html');" data-toggle="pill" href="#id_DIV_Buchung_VERLAUF">Verlauf</a>
                 </div>
             </ul>
             <hr />
