Edit change Date

--- a/html/Auswertung/Filter.html
+++ b/html/Auswertung/Filter.html
@@ -80,16 +80,18 @@
 
     //Change Datum
     function changeDate(data) {
-        FILTERcurrDate = this.value;
-        alert(FILTERcurrDate);
+        FILTERcurrDate = data;
+      
 
     }
     function changeDate1(data) {
-        FILTERcurrDate1 = this.value;
+        FILTERcurrDate1 = data;
+    
 
     }
     function changeDate2(data) {
-        FILTERcurrDate2 = this.value;
+        FILTERcurrDate2 = data;
+
 
     }
 
