Updated Variable Names

--- a/html/Auswertung/Filter.html
+++ b/html/Auswertung/Filter.html
@@ -163,9 +163,9 @@
                 'date': FILTERcurrDate,
                 'date_from':FILTERcurrDate1 ,
                 'date_to':FILTERcurrDate2,
-                'value':FILTERcurrBetrag1 ,
-                'value_compare':FILTERcurrBetrag2 , 
-                'category': FILTERcurrKategorieID,
+                'value_from':FILTERcurrBetrag1 ,
+                'value_to':FILTERcurrBetrag2 ,
+                'category_id': FILTERcurrKategorieID,
                 'group_by': FILTERcurrGroupBy,
                 'sort_by': "",
                 'sort_order':""
