Added Filter function for Kategorie

--- a/html/Auswertung/Filter.html
+++ b/html/Auswertung/Filter.html
@@ -96,6 +96,9 @@
         FILTERcurrKategorieID = this.value;
         FILTERcurrKategorieText = $("#FILTERinputKategorie option:selected").text();
 
+        if (FILTERcurrKategorieText == "Auswählen") {
+            FILTERcurrKategorieID = "";
+        }
 
     });
 
