--- a/html/Buchung/Neu.html
+++ b/html/Buchung/Neu.html
@@ -140,6 +140,9 @@
         currKategorieID = this.value;
         currKategorieText = $("#inputKategorie option:selected").text();
 
+        if (currKategorieID == "Auswählen") {
+            FILTERcurrKategorieID = "";
+        }
     });
 
     // Change Betrag
